##########################
# Setup.py Configuration #
##########################
[metadata]
name = contnext_viewer
version = 0.0.1-dev
description = ContNeXt WebApp
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/ContNetXt/web_app
project_urls =
    Bug Tracker = https://github.com/ContNetXt/web_app/issues
    Source Code = https://github.com/ContNetXt/web_app

# Author information
author = sara_diaz
author_email = sara.diaz.del.ser@scai.fraunhofer.de
maintainer = sara_diaz
maintainer_email = sara.diaz.del.ser@scai.fraunhofer.de

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    Bioinformatics
    Co-Expression Networks
    Network Biology
    Transcriptomic
    Biological Context


[options]
install_requires =
    click
    more_click
    aniso8601~=9.0.1
    click~=8.0.3
    cycler~=0.11.0
    Flask~=2.0.2
    Flask-Admin~=1.5.8
    Flask-Cors~=3.0.10
    Flask-RESTful~=0.3.9
    Flask-SQLAlchemy~=2.5.1
    fonttools~=4.28.2
    greenlet~=1.1.2
    importlib-metadata~=4.8.1
    itsdangerous~=2.0.1
    Jinja2~=3.0.2
    kiwisolver~=1.3.2
    MarkupSafe~=2.0.1
    matplotlib~=3.5.0
    more-click~=0.0.6
    more-itertools~=8.12.0
    networkx~=2.6.3
    numpy~=1.21.4
    packaging~=21.3
    Pillow~=8.4.0
    pyparsing~=3.0.6
    python-dateutil~=2.8.2
    pytz~=2021.3
    scipy~=1.7.3
    setuptools-scm~=6.3.2
    six~=1.16.0
    SQLAlchemy~=1.4.26
    SQLAlchemy-Utils~=0.37.9
    tomli~=1.2.2
    tqdm~=4.62.3
    typing-extensions~=3.10.0.2
    Werkzeug~=2.0.2
    WTForms~=3.0.0
    zipp~=3.6.0

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi

web =
    flask
    flask_admin

[options.entry_points]
console_scripts =
    contnext_viewer = contnext_viewer.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = contnext_viewer
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/contnext_viewer
    .tox/*/lib/python*/site-packages/contnext_viewer

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
